# DeLeIDS-GRU-based-DDoS-Detection-CIC-DDoS2019

./: EVALUATION_GUIDE.md  GRU-DDoS2019.ipynb  README.md  REPORT.md  config.yml  convert.py  gru_tftp_model.pth  model.py  onnxtest.py  preprocess.py  pyproject.toml  train_gru_cicddos2019.py
